contrast issues

--- a/scss/_article.scss
+++ b/scss/_article.scss
@@ -193,7 +193,6 @@
       content: "Publisert: ";
     }
     font-size: 0.8rem;
-    opacity: 0.5;
   }
   .columns.byline {
     padding: 1rem 0;
