--- a/scss/_search.scss
+++ b/scss/_search.scss
@@ -19,6 +19,9 @@
     max-width: 100%;
     width: 200px;
     outline: 0;
+    &::placeholder {
+      color: var(--v2-card-paragraph-color);
+    }
   }
   button {
     background-color: transparent;
